--- a/.github/workflows/merge_test.yml
+++ b/.github/workflows/merge_test.yml
@@ -5,8 +5,8 @@ on:
 
 jobs:
   test:
-    if: ${{ github.run_attempt != 1 }}
+#    if: ${{ github.run_attempt != 1 }}
     uses: ./.github/workflows/call_test.yml
   lint:
-    if: ${{ github.run_attempt != 1 }}
+#    if: ${{ github.run_attempt != 1 }}
     uses: ./.github/workflows/call_ktlint.yml
