--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -49,6 +49,9 @@ jobs:
             ~/.cache/main.kts.compiled.cache
           key: ${{ hashFiles('**/*.main.kts') }}
       - name: annotations
+        env:
+          DIFF: ${{ env.DIFF }}
+          XML_TEXT: ${{ env.XML_TEXT }}
         run: |
           echo ::set-output name=value::$(./.github/workflows/script/diff_annotations.main.kts)
       - name: ktlint check-runs
