--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -50,8 +50,8 @@ jobs:
           key: ${{ hashFiles('**/*.main.kts') }}
       - name: annotations
         env:
-          DIFF: ${{ env.DIFF }}
-          XML_TEXT: ${{ env.XML_TEXT }}
+          DIFF: ${{ toJson(env.DIFF) }}
+          XML_TEXT: ${{ toJson(env.XML_TEXT) }}
         run: |
           echo ::set-output name=value::$(./.github/workflows/script/diff_annotations.main.kts)
       - name: ktlint check-runs
