--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -28,8 +28,8 @@ jobs:
         if: ${{ failure() }}
         id: vars
         run: |
-          echo ::set-output name=diff::$(git diff -U0)
-          echo ::set-output name=xml_text::$(find . -type f -path './build/reports/ktlint/*.xml' | xargs cat)
+          echo ::set-output name=diff::"$(git diff -U0)"
+          echo ::set-output name=xml_text::"$(find . -type f -path './build/reports/ktlint/*.xml' | xargs cat)"
           echo '${{ steps.vars.outputs.diff }}'
 
   check-runs:
