--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -29,17 +29,18 @@ jobs:
         id: vars
         run: |
           export DIFF="$(git diff -U0)"
+          DIFF2="$(git diff -U0)"
           echo ::set-output name=diff_json::${{ toJson(env.DIFF) }}
           echo ::set-output name=diff::"$(git diff -U0)"
           echo ::set-output name=xml_text::"$(find . -type f -path './build/reports/ktlint/*.xml' | xargs cat)"
       - name: get output
         if: ${{ failure() }}
         run: |
-          echo "${{ steps.vars.outputs.diff_json }}"
-          echo "${{ steps.vars.outputs.diff }}"
+          echo "================"
+          echo "$DIFF"
           
-          echo '${{ steps.vars.outputs.diff_json }}'
-          echo '${{ steps.vars.outputs.diff }}'
+          echo "================"
+          echo "$DIFF2"
 
   check-runs:
     needs: [ main ]
