--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -5,9 +5,6 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    outputs:
-      diff: ${{ steps.vars.outputs.diff }}
-      xml_text: ${{ steps.vars.outputs.xml_text }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
@@ -28,19 +25,13 @@ jobs:
         if: ${{ failure() }}
         id: vars
         run: |
-          export DIFF="$(git diff -U0)"
-          DIFF2="$(git diff -U0)"
-          echo ::set-output name=diff_json::${{ toJson(env.DIFF) }}
-          echo ::set-output name=diff::"$(git diff -U0)"
-          echo ::set-output name=xml_text::"$(find . -type f -path './build/reports/ktlint/*.xml' | xargs cat)"
-      - name: get output
+          git diff -U0 1> /tmp/artifact/diff.txt
+          find . -type f -path './build/reports/ktlint/*.xml' | xargs cat > /tmp/artifact/lint-xml.txt
+      - uses: actions/upload-artifact@v3
         if: ${{ failure() }}
-        run: |
-          echo "================"
-          echo "$DIFF"
-          
-          echo "================"
-          echo "$DIFF2"
+        with:
+          name: main-artifact
+          path: /tmp/artifact/*
 
   check-runs:
     needs: [ main ]
@@ -48,10 +39,12 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SHA: ${{ (github.event.pull_request.head.sha != null && github.event.pull_request.head.sha) || github.sha }}
-      DIFF: ${{ needs.main.outputs.diff }}
-      XML_TEXT: ${{ needs.main.outputs.xml_text }}
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: main-artifact
+          path: /tmp/artifact/
       - name: Cache main.kts
         uses: actions/cache@v3
         with:
@@ -61,9 +54,7 @@ jobs:
       - name: create annotations
         id: annotations
         run: |
-          echo "${{ needs.main.outputs.diff }}"
-          echo '======'
-          echo ::set-output name=value::$(./.github/workflows/script/diff_annotations.main.kts)
+          echo ::set-output name=value::$(DIFF="$(cat /tmp/artifact/diff.txt)" ./.github/workflows/script/diff_annotations.main.kts)
       - name: ktlint check-runs
         uses: octokit/request-action@v2.x
         id: create_check_run
