--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -46,11 +46,6 @@ jobs:
         with:
           name: main-artifact
           path: /tmp/artifact/
-      - name: expand
-        run: |
-          ls -al /tmp/artifact/
-          cd /tmp/artifact/
-          find .
       - name: Cache main.kts
         uses: actions/cache@v3
         with:
@@ -60,7 +55,7 @@ jobs:
       - name: create annotations
         id: annotations
         run: |
-          echo ::set-output name=value::$(DIFF="$(cat /tmp/artifact/diff.txt)" ./.github/workflows/script/diff_annotations.main.kts)
+          echo ::set-output name=value::$(./.github/workflows/script/diff_annotations.main.kts "$(cat /tmp/artifact/diff.txt)")
       - name: ktlint check-runs
         uses: octokit/request-action@v2.x
         id: create_check_run
