--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -75,7 +75,6 @@ jobs:
           status: "completed"
           output: |
             title: "Ktlint"
-            summary: ${{ env.XML_TEXT }}
-            annotations: ${{ steps.annotations.value }}
+            annotations: ${{ fromJson(steps.annotations.value) }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
