--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -64,7 +64,7 @@ jobs:
           echo ::set-output name=value::"$(echo $RESULT)"
       - name: tmp
         run: |
-          cat "TMP=" >> $GITHUB_ENV
+          echo "TMP=" >> $GITHUB_ENV
           echo "$(cat /tmp/artifact/lint-xml.txt)" >> $GITHUB_ENV
       - name: tmp2
         run: |
