--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -76,7 +76,8 @@ jobs:
           status: "completed"
           output: |
             title: "Ktlint"
-            summary: ${{ env.KTLINT_SUMMARY }}
+            summary: |
+              ${{ env.KTLINT_SUMMARY }}
             annotations: ${{ steps.annotations.outputs.value }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
