--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -62,7 +62,9 @@ jobs:
         run: |
           RESULT=$(./.github/workflows/script/diff_annotations.main.kts "$(cat /tmp/artifact/diff.txt)")
           ./.github/workflows/script/ktlint_xml_sumarry.main.kts /tmp/artifact/lint-xml.txt
-          cat $KTLINT_SUMMARY
+          
+          echo "==============="
+          echo $KTLINT_SUMMARY
       - name: ktlint check-runs Result
         uses: octokit/request-action@v2.x
         id: create_check_run
@@ -76,8 +78,7 @@ jobs:
           status: "completed"
           output: |
             title: "Ktlint"
-            summary: |
-              ${{ env.KTLINT_SUMMARY }}
+            summary: ${{ env.KTLINT_SUMMARY }}
             annotations: ${{ steps.annotations.outputs.value }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
