--- a/.github/workflows/call_deploy_app_distribution.yml
+++ b/.github/workflows/call_deploy_app_distribution.yml
@@ -10,6 +10,13 @@ on:
         type: boolean
 
 jobs:
+  dispatch_only:
+    if: ${{ !github.event.issue.pull_request }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: "test"
+        run: |
+          echo "test"
   main:
     runs-on: ubuntu-latest
     steps:
