--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -10,6 +10,7 @@ jobs:
   tmp:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: "test"
         run: |
           echo "test"
