--- a/.github/workflows/call_deploy_app_distribution.yml
+++ b/.github/workflows/call_deploy_app_distribution.yml
@@ -29,7 +29,7 @@ jobs:
       - name: "build step"
         run: |
           echo ${{ github.event.inputs.feature_1 }}
-          echo '${{ toJson(github) }}'
+          echo `${{ toJson(github) }}`
       - name: set
         id: vars
         run: |
