--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -17,7 +17,7 @@ jobs:
           route: GET /repos/{owner}/{repo}/pulls/{pull_number}
           owner: ${{ github.repository_owner }}
           repo: ${{ github.event.repository.name }}
-          pull_number: $${{ github.event.issue.number }}
+          pull_number: ${{ github.event.issue.number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "test"
