--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -22,6 +22,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "test"
         env:
-          TMP: ${{ toJson(github.event) }}
+          TMP: ${{ steps.pull_request.outputs.data }}
         run: |
-          echo "${{ steps.pull_request.outputs.data }}"
+          echo "$TMP"
