--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -10,7 +10,6 @@ jobs:
   tmp:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - uses: octokit/request-action@v2.x
         id: pull_request
         with:
@@ -22,6 +21,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "test"
         env:
-          TMP: ${{ fromJSON(steps.pull_request.outputs.data).head.ref }}
+          BRANCH_NAME: ${{ fromJSON(steps.pull_request.outputs.data).head.ref }}
         run: |
-          echo "$TMP"
+          echo "$BRANCH_NAME"
