--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -4,9 +4,11 @@ on:
     types: [ created ]
 
 jobs:
-  issue_comment:
+  get_branch_name:
     if: ${{ github.event.issue.pull_request && github.event.comment.body == './distFirebase' }}
     runs-on: ubuntu-latest
+    outputs:
+      BRANCH_NAME: ${{ fromJSON(steps.pull_request.outputs.data).head.ref }}
     steps:
       - uses: octokit/request-action@v2.x
         id: pull_request
@@ -22,4 +24,9 @@ jobs:
           BRANCH_NAME: ${{ fromJSON(steps.pull_request.outputs.data).head.ref }}
         run: |
           echo "$BRANCH_NAME"
+  call_dist_firebase:
+    needs: [get_branch_name]
     uses: ./.github/workflows/call_deploy_app_distribution.yml
+      with:
+        BRANCH_NAME: ${{ needs.get_branch_name.outputs.BRANCH_NAME }}
+
