--- a/.github/workflows/dist_firebase_dispatch.yml
+++ b/.github/workflows/dist_firebase_dispatch.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: hoge
         env:
-          TMP: ${{ toJson(github.event) }}
+          TMP: ${{ toJson(github) }}
         run: |
           echo "$TMP"
           
